aks-cloud-hybrid-poc/deploymentmessageprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: pochaakshybridmessageprocessor
  name: pochaakshybridmessageprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pochaakshybridmessageprocessor
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: pochaakshybridmessageprocessor
    spec:
      containers:
      - image: pochaakshybridapi20230726154153.azurecr.io/pochaakshybridmessageprocessor:1.1
        name: pochaakshybridmessageprocessor
        resources: {}
        volumeMounts:
            - name: azurefile
              mountPath: /myfileshare
      volumes:
        - name: azurefile
          azureFile:
            secretName: storage-secret
            shareName: pathshare
            readOnly: false
