aks-cloud-hybrid-poc/deployment-api-lb-afs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: pochaakshybridapi
  name: pochaakshybridapi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pochaakshybridapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: pochaakshybridapi
    spec:
      containers:
        - image: pochaakshybridapi20230726154153.azurecr.io/pochaakshybridapi:1.1
          name: pochaakshybridapi
          ports:
            - name: http
              containerPort: 80
          resources: {}
          volumeMounts:
            - name: azurefile
              mountPath: /myfileshare
      volumes:
        - name: azurefile
          azureFile:
            secretName: storage-secret
            shareName: pathshare
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: pathways-cloud-api-svc
spec:
  type: LoadBalancer
  selector:
    run: pochaakshybridapi
  ports:
    - protocol: TCP
      port: 80
